kiosk 주석 및 수정